tests/NormalTests/paczka1/small_fuzzy/82641944.err
Error in line 4: S724 A350 93,2
Error in line 7: S724 S69 63,4
